# masters

./: .gitignore  README.md  compose.yml  dev.sh  jupyter-dependencies.txt  ml-dependencies.txt  prepare_images_and_paths.sh  shell.nix
back/: .env  Cargo.toml  Dockerfile  README.md  compose.yml  libtorch_setup.sh  notes  sqlite.db  sqlite.db-shm  sqlite.db-wal
back/migrations/: 20250504110317_create_users_table.sql  20250627125031_create_base_tables.sql
back/src/: db.rs  http.rs  lib.rs  main.rs  ml.rs
back/src/http/handlers/: delete.rs  mod.rs  profile.rs  register.rs  track_menu.rs  upload.rs
back/static/: stylesheet.css
back/templates/: about.html  base.html  classification_page.html  delete_status.html  form.html  song.html  track_menu.html  track_page.html  upload_successful.html  user_metadata.html
back/util/: audio_cnn_model.pt  test_signal.npy
data/: .env  Dockerfile  Exploration_Feature_Extraction.ipynb  Infer.ipynb  Learning_Pipeline.ipynb  app.py  compose.yml  download_utils.sh  jit_cpu_latest.pt  readme.md  reqs  requirements  requirements.txt
data/artifacts/: chroma_cqt_mean.npy  chroma_cqt_std.npy  chroma_stft_mean.npy  chroma_stft_std.npy  ft_mean.npy  ft_std.npy  mel_spec_mean.npy  mel_spec_std.npy  mfcc_mean.npy  mfcc_std.npy  power_spec_std.npy  songs_ids_with_archives.csv  spec_mean.npy
data/datasets/: 2025-04-09_fma_small.csv  records_ready.parquet  tracks_clean.csv
data/notes/: 1SecTransformation_Pipeline.ipynb  Inference_Pipeline.ipynb  Learning_Pipeline.ipynb  Transformation_Pipeline.ipynb
data/server_utils/: __init__  artifacts_gen.py  transformations.py  utilities.py
data/utils/: __init__.py  artifacts.py  artifacts_gen.py  bmo.py  data_transformation.py  feature_extraction.py  load.py  model.py
