[package]
name = "back"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.8.4", features=["multipart"]}
axum-extra = {version = "0.10.1", features = ["cookie"]}
serde = {version="1.0", features=["derive"]}
askama = {version = "0.14", features=["serde_json"]}
tokio = {version="1.0", features=["full"]}
dotenv = "0.15"
sqlx = {version = "0.8.1", features = ["postgres", "runtime-tokio", "chrono", "macros"] }
chrono = {version = "0.4", features = ["serde"]}
tower-http = {version = "0.5.2", features=["cors", "fs"]}
axum-macros = "0.5.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tch = "0.20.0"
reqwest = {version = "0.12.15", features=["json"]}
serde_json = "1.0.140"
npyz = "0.8"
ndarray-npy = { version = "0.9.1", default-features = false }
ndarray = "0.16.1"

[dependencies.uuid]
version = "1.16.0"
features = [
    "v4",
    "serde"
]


[dev-dependencies]
tower = { version = "0.5.2", features=["util"]}

[build-dependencies]
tch = "0.20.0"